--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ docker_auth: &docker_auth
 
 defaults: &defaults
   docker:
-    - image: greenpeaceinternational/p4-builder:build-1816
+    - image: greenpeaceinternational/p4-builder:latest
       auth:
         <<: *docker_auth
 
@@ -33,7 +33,6 @@ job_environments:
     HELM_RELEASE: planet4-test-atlas
     WP_DB_NAME: planet4-testatla_wordpress_develop
     WP_STATELESS_BUCKET: planet4-test-atlas-stateless-develop
-    CHART_VERSION: 0.8.24-alpha1
 
 
 commands:
