--- a/.circleci/artifacts.yml
+++ b/.circleci/artifacts.yml
@@ -9,7 +9,7 @@ job_environments:
     CLOUDSQL_INSTANCE: p4-develop-k8s
     GOOGLE_PROJECT_ID: planet-4-151612
     GCLOUD_CLUSTER: p4-development
-    HELM_NAMESPACE: develop
+    HELM_NAMESPACE: test-atlas
     HELM_RELEASE: planet4-test-atlas
     WP_DB_NAME: planet4-testatla_wordpress_develop
     WP_STATELESS_BUCKET: planet4-test-atlas-stateless-develop
